--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,11 +5,13 @@
 }
 
 .img-nav {
-    max-width: 20%;
+    padding-left: 1rem;
+    max-width: 75%;
 }
 
 .wrapper {
-    padding: 0 8rem;
+    padding: 0 1rem;
+    margin: 0 0.5rem;
 }
 /* Cards Settings */
 .doc {
@@ -115,6 +117,7 @@ footer {
 
 .col-md-10.main {
     padding-right: 2rem;
+    padding-top: 1rem;
 }
 
 .col-md-2.aside {
@@ -123,7 +126,7 @@ footer {
 }
 .col-md-2.aside.index {
     padding: 1rem;
-    margin-top: 0;
+    margin-top: 1rem;
 }
 
 .card-img-top.aside {
@@ -350,7 +353,8 @@ a.aviso-privacidad {
     overflow: hidden;
     top: 0;
     left: 0;
-    padding: 50px 20px;
+    /* padding: 50px 20px; */
+    padding: 25% 2rem;
 }
 
 .hovereffect img {
@@ -426,6 +430,36 @@ a.aviso-privacidad {
     width: 400px !important;
 }
 
-.btn.suscribe.mb-2{
+.content.profile{
+    padding: 0 10rem;
+    /* margin: 0  */
+    background-color: #fff;
+}
+
+.card-header.profile{
     background-color: rgb(0, 70, 128) !important;
+    color: #fff !important;
+}
+
+.btn.btn-primary {
+    color: #fff;
+    background-color: #2f7840;
+    border-color: #2f7840;
+    box-shadow: 0 2px 2px 0 rgb(156 39 176 / 14%), 0 3px 1px -2px rgb(156 39 176 / 20%), 0 1px 5px 0 rgb(156 39 176 / 12%);
+}
+.card-title.text-uppercase.capsulas{
+    padding: .5rem 0;
+    color: rgb(0, 70, 128) !important;
+    font-weight: 400 !important;
+}
+
+.titulo-capsula{
+    color: rgb(0, 70, 128) !important;
+    font-weight: 400 !important;
+}
+
+.link-capsula.aside,
+.titulo-capsula.aside{
+    color: rgb(0, 70, 128) !important;
+    font-weight: 400 !important;
 }
