--- a/public/css/app.css
+++ b/public/css/app.css
@@ -372,7 +372,29 @@ a.aviso-privacidad {
     top: 0;
     left: 0;
     /* padding: 50px 20px; */
+    padding: 15% 2rem;
+}
+
+.hovereffect .overlay-2 {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    /* padding: 50px 20px; */
     padding: 25% 2rem;
+}
+
+.hovereffect .overlay-3 {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    /* padding: 50px 20px; */
+    padding: 35% 2rem;
 }
 
 .hovereffect img {
