--- a/public/css/app.css
+++ b/public/css/app.css
@@ -610,5 +610,6 @@ a.nav-link.main:hover, a.nav-link.main:focus {
 .img-capsulas{
     object-fit: cover;
     height: 100%;
+    width: 100%;
     object-position: center;
 }
